packages/qwik-optimizer/rust/core/src/snapshots/qwik_core__test__example_1.snap
---
source: packages/qwik-optimizer/rust/core/src/test.rs
assertion_line: 91
expression: output
---
==INPUT==


import { $, component, onRender } from '@builder.io/qwik';

export const renderHeader = $(() => {
	return (
		<div onClick={$((ctx) => console.log(ctx))}/>
	);
});
const renderHeader = component($(() => {
	console.log("mount");
	return render;
}));

============================= renderheader_zbbhwn4e8cg.tsx (ENTRY POINT)==

import { qrl } from "@builder.io/qwik";
export const renderHeader_zBbHWn4e8Cg = ()=>{
    return <div onClick={/*#__PURE__*/ qrl(()=>import("./renderheader_div_onclick_fv2uzal99u4"), "renderHeader_div_onClick_fV2uzAL99u4")}/>;
};
export { _hW } from "@builder.io/qwik";


Some("{\"version\":3,\"sources\":[\"/user/qwik/src/test.tsx\"],\"names\":[],\"mappings\":\";wCAG8B;IAC7B,QACE,IAAI;AAEP\"}")
/*
{
  "origin": "test.tsx",
  "name": "renderHeader_zBbHWn4e8Cg",
  "entry": null,
  "displayName": "renderHeader",
  "hash": "zBbHWn4e8Cg",
  "canonicalFilename": "renderheader_zbbhwn4e8cg",
  "path": "",
  "extension": "tsx",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "$",
  "captures": false,
  "loc": [
    92,
    163
  ]
}
*/
============================= renderheader_component_u6kkv07sbpq.tsx (ENTRY POINT)==

export const renderHeader_component_U6Kkv07sbpQ = ()=>{
    console.log("mount");
    return render;
};
export { _hW } from "@builder.io/qwik";


Some("{\"version\":3,\"sources\":[\"/user/qwik/src/test.tsx\"],\"names\":[],\"mappings\":\"kDAQiC;IAChC,QAAQ,GAAG,CAAC;IACZ,OAAO;AACR\"}")
/*
{
  "origin": "test.tsx",
  "name": "renderHeader_component_U6Kkv07sbpQ",
  "entry": null,
  "displayName": "renderHeader_component",
  "hash": "U6Kkv07sbpQ",
  "canonicalFilename": "renderheader_component_u6kkv07sbpq",
  "path": "",
  "extension": "tsx",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "$",
  "captures": false,
  "loc": [
    199,
    247
  ]
}
*/
============================= test.tsx ==

import { qrl } from "@builder.io/qwik";
import { component } from '@builder.io/qwik';
export const renderHeader = /*#__PURE__*/ qrl(()=>import("./renderheader_zbbhwn4e8cg"), "renderHeader_zBbHWn4e8Cg");
const renderHeader = component(/*#__PURE__*/ qrl(()=>import("./renderheader_component_u6kkv07sbpq"), "renderHeader_component_U6Kkv07sbpQ"));


Some("{\"version\":3,\"sources\":[\"/user/qwik/src/test.tsx\"],\"names\":[],\"mappings\":\";AACA,SAAY,SAAS,QAAkB,mBAAmB;AAE1D,OAAO,MAAM,uGAIV;AACH,MAAM,eAAe\"}")
============================= renderheader_div_onclick_fv2uzal99u4.tsx (ENTRY POINT)==

export const renderHeader_div_onClick_fV2uzAL99u4 = (ctx)=>console.log(ctx);
export { _hW } from "@builder.io/qwik";


Some("{\"version\":3,\"sources\":[\"/user/qwik/src/test.tsx\"],\"names\":[],\"mappings\":\"oDAKkB,CAAC,MAAQ,QAAQ,GAAG,CAAC\"}")
/*
{
  "origin": "test.tsx",
  "name": "renderHeader_div_onClick_fV2uzAL99u4",
  "entry": null,
  "displayName": "renderHeader_div_onClick",
  "hash": "fV2uzAL99u4",
  "canonicalFilename": "renderheader_div_onclick_fv2uzal99u4",
  "path": "",
  "extension": "tsx",
  "parent": "renderHeader_zBbHWn4e8Cg",
  "ctxKind": "function",
  "ctxName": "$",
  "captures": false,
  "loc": [
    128,
    153
  ]
}
*/
== DIAGNOSTICS ==

[]
