packages/qwik-optimizer/rust/core/src/snapshots/qwik_core__test__example_5.snap
---
source: packages/qwik-optimizer/rust/core/src/test.rs
assertion_line: 169
expression: output
---
==INPUT==


import { $, component$ } from '@builder.io/qwik';
export const Header = component$(() => {
	return (
		<>
			<div onClick={(ctx) => console.log("1")}/>
			<div onClick={$((ctx) => console.log("2"))}/>
		</>
	);
});

============================= header_component_j4uyihabnr4.tsx (ENTRY POINT)==

import { qrl } from "@builder.io/qwik";
export const Header_component_J4uyIhaBNR4 = ()=>{
    return <>
			<div onClick={(ctx)=>console.log("1")}/>
			<div onClick={/*#__PURE__*/ qrl(()=>import("./header_component_div_onclick_i7ekvwh3674"), "Header_component_div_onClick_i7ekvWH3674")}/>
		</>;
};


Some("{\"version\":3,\"sources\":[\"/user/qwik/src/test.tsx\"],\"names\":[],\"mappings\":\";4CAEiC;IAChC,SACG;GACD,CAAC,IAAI,SAAS,CAAC,MAAQ,QAAQ,GAAG,CAAC,OAAO;GAC1C,CAAC,IAAI,mIAAwC;EAC9C;AAEF\"}")
/*
{
  "origin": "test.tsx",
  "name": "Header_component_J4uyIhaBNR4",
  "entry": null,
  "displayName": "Header_component",
  "hash": "J4uyIhaBNR4",
  "canonicalFilename": "header_component_j4uyihabnr4",
  "path": "",
  "extension": "tsx",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "component$",
  "captures": false,
  "loc": [
    85,
    214
  ]
}
*/
============================= test.tsx ==

import { componentQrl } from "@builder.io/qwik";
import { qrl } from "@builder.io/qwik";
export const Header = /*#__PURE__*/ componentQrl(/*#__PURE__*/ qrl(()=>import("./header_component_j4uyihabnr4"), "Header_component_J4uyIhaBNR4"));


Some("{\"version\":3,\"sources\":[\"/user/qwik/src/test.tsx\"],\"names\":[],\"mappings\":\";;AAEA,OAAO,MAAM,uBAAS,8GAOnB\"}")
============================= header_component_div_onclick_i7ekvwh3674.tsx (ENTRY POINT)==

export const Header_component_div_onClick_i7ekvWH3674 = (ctx)=>console.log("2");
export { _hW } from "@builder.io/qwik";


Some("{\"version\":3,\"sources\":[\"/user/qwik/src/test.tsx\"],\"names\":[],\"mappings\":\"wDAMmB,CAAC,MAAQ,QAAQ,GAAG,CAAC\"}")
/*
{
  "origin": "test.tsx",
  "name": "Header_component_div_onClick_i7ekvWH3674",
  "entry": null,
  "displayName": "Header_component_div_onClick",
  "hash": "i7ekvWH3674",
  "canonicalFilename": "header_component_div_onclick_i7ekvwh3674",
  "path": "",
  "extension": "tsx",
  "parent": "Header_component_J4uyIhaBNR4",
  "ctxKind": "function",
  "ctxName": "$",
  "captures": false,
  "loc": [
    173,
    198
  ]
}
*/
== DIAGNOSTICS ==

[]
