packages/qwik-optimizer/rust/core/src/snapshots/qwik_core__test__example_build_server.snap
---
source: packages/qwik-optimizer/rust/core/src/test.rs
assertion_line: 2731
expression: output
---
==INPUT==


import { component$, useStore } from '@builder.io/qwik';
import { isServer, isBrowser } from '@builder.io/qwik/build';
import { mongodb } from 'mondodb';
import { threejs } from 'threejs';

import L from 'leaflet';

export const functionThatNeedsWindow = () => {
	if (isBrowser) {
	console.log('l', L);
	console.log('hey');
	window.alert('hey');
	}
};

export const App = component$(() => {
	useMount$(() => {
		if (isServer) {
			console.log('server', mongodb());
		}
		if (isBrowser) {
			console.log('browser', new threejs());
		}
	});
	return (
		<Cmp>
			{isServer && <p>server</p>}
			{isBrowser && <p>server</p>}
		</Cmp>
	);
});

============================= test.tsx ==

import { componentQrl } from "@builder.io/qwik";
import { qrl } from "@builder.io/qwik";
export const functionThatNeedsWindow = ()=>{};
export const App = /*#__PURE__*/ componentQrl(/*#__PURE__*/ qrl(()=>import("./s_ckepmxzlub0"), "s_ckEPmXZlub0"));


Some("{\"version\":3,\"sources\":[\"/user/qwik/src/test.tsx\"],\"names\":[],\"mappings\":\";;AAQA,OAAO,MAAM,0BAA0B,KAMvC,EAAE;AAEF,OAAO,MAAM,oBAAM,gFAehB\"}")
============================= s_ckepmxzlub0.tsx (ENTRY POINT)==

import { mongodb } from "mondodb";
export const s_ckEPmXZlub0 = ()=>{
    useMount$(()=>{
        console.log('server', mongodb());
    });
    return <Cmp>
			{<p>server</p>}
			{false}
		</Cmp>;
};


Some("{\"version\":3,\"sources\":[\"/user/qwik/src/test.tsx\"],\"names\":[],\"mappings\":\";6BAgB8B;IAC7B,UAAU;QAER,QAAQ,GAAG,CAAC,UAAU;IAKxB;IACA,QACE,IAAI;GACJ,EAAc,EAAE,MAAM,EAAE,GAAG;GAC3B,OAA4B;EAC7B,EAAE;AAEJ\"}")
/*
{
  "origin": "test.tsx",
  "name": "s_ckEPmXZlub0",
  "entry": null,
  "displayName": "App_component",
  "hash": "ckEPmXZlub0",
  "canonicalFilename": "s_ckepmxzlub0",
  "path": "",
  "extension": "tsx",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "component$",
  "captures": false,
  "loc": [
    385,
    636
  ]
}
*/
== DIAGNOSTICS ==

[]
